# python-code-katas

./: .pdm-python  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
atm/: README.md
bags/: README.md
character_copier/: README.md
character_copier/src/: copier.py  destination.py
fizz_buzz/: README.md
fizz_buzz/src/: fizz_buzz.py
fizz_buzz/tests/: test_fizz_buzz.py
gilded_rose/: README.md
gilded_rose/src/: gilded_rose.py  gilded_rose_approvals.py  item_name.py  item_quality.py  item_sell_in.py  items.py  items_approvals.py
gilded_rose/tests/: test_gilded_rose.py  test_gilded_rose_approvals.py
leap_year/: README.md
leap_year/src/: leap_year.py
leap_year/tests/: test_leap_year.py
ohce/: README.md  __init__.py
parallel_change/src/: field.py  method.py
parallel_change/tests/: test_parallel_change.py
scripts/: create_package.py
scripts/boilerplate/: readme.py
solutions/parallel_change/: README.md
solutions/tell_dont_ask/: README.md
solutions/tic_tac_toe/: __init__.py
tell_dont_ask/tests/: conftest.py
tic_tac_toe/: README.md
tic_tac_toe/src/: already_marked_tile.py  board.py  game.py  invalid_turn.py  player.py  tile.py  winning_plays.py
tic_tac_toe/tests/: test_board.py  test_game.py
tire_pressure/: README.md
tire_pressure/src/: alarm.py  sensor.py
tire_pressure/tests/: stub_sensor.py  test_alarm.py
trip_service/: README.md
trip_service/src/: service.py  trip.py  user.py  user_builder.py  user_session.py
trip_service/tests/: in_memory_trip_repository.py  test_service.py  test_user.py  test_user_builder.py
(+129 files in other folders)
