[project]
name = "python-code-katas"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dimanu-py", email = "diegomtz126@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
tests = [
    "pytest>=8.3.3",
    "expects>=0.9.0",
    "approvaltests>=14.0.0",
    "doublex>=1.9.6.1",
]
