[project]
name = "python-code-katas"
version = "0.1.0"
description = "A collection of Python code katas, with both solutions and descriptions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "approvaltests>=14.3.0",
    "doublex>=1.9.6.1",
    "doublex-expects>=0.7.1",
    "expects>=0.9.0",
    "pytest>=8.3.4",
]
