[project]
name = "python-code-katas"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dimanu-py", email = "diegomtz126@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "approvaltests>=14.3.0",
    "doublex>=1.9.6.1",
    "doublex-expects>=0.7.1",
    "expects>=0.9.0",
    "pytest>=8.3.4",
]
